<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="@string/set_key_save"
        app:icon="@drawable/ic_save"
        app:title="@string/set_save"
        app:summary="@string/set_save_subtitle"/>
    <Preference
        app:key="@string/set_key_save_height"
        app:icon="@drawable/ic_save"
        app:title="@string/set_save_height"
        app:summary="@string/set_save_height_subtitle"/>
    <SwitchPreferenceCompat
        app:icon="@drawable/ic_save"
        app:summaryOn="@string/set_save_state_subtitleOn"
        app:summaryOff="@string/set_save_state_subtitleOff"
        app:key="@string/set_key_save_state"
        android:title="@string/set_save_state"/>
</PreferenceScreen>