<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.guo.onetext.activity.MainActivity">

    <item
        app:actionLayout="@layout/menu_action_item_badge"
        android:icon="@drawable/ic_heart"
        android:id="@id/action_history"
        android:orderInCategory="100"
        android:title="@string/action_history"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_set"
        android:id="@id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_about"
        android:id="@id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="ifRoom" />
</menu>