<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@id/card_background_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@id/card_shot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <LinearLayout
                    android:animateLayoutChanges="true"
                    android:id="@id/card_image_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@id/card_text_author_felt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@id/card_text_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginTop="24dp"
                        android:transitionName="@string/transitionName_author" />

                    <TextView
                        android:id="@id/card_text_content_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@id/card_text_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:transitionName="@string/transitionName_content" />

                    <TextView
                        android:id="@id/card_text_content_bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@id/card_text_source"
                        android:layout_marginTop="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:transitionName="@string/transitionName_source" />
                    <TextView
                        android:id="@id/card_text_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:transitionName="@string/transitionName_date" />
                    <TextView
                        android:id="@id/card_mark_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/card_margin"
                        android:text="@string/default_mark"
                        android:textSize="10sp"
                        android:visibility="gone" />
                    <LinearLayout
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <cn.guo.onetext.widget.SvgAnimationView.SvgAnimationView
                            android:id="@id/card_svg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <cn.guo.onetext.widget.CircleImageView
                            android:id="@id/card_heart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>