<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@id/card_background_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@id/card_shot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@id/card_image_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/card_re_left"
                        android:layout_marginTop="@dimen/card_re_top"
                        android:layout_marginRight="@dimen/card_re_right"
                        android:layout_marginBottom="@dimen/card_re_bottom"
                        android:animateLayoutChanges="true">

                        <LinearLayout
                            android:id="@id/card_temps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right|center_vertical"
                            android:orientation="vertical">

                            <FrameLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@id/card_text_content"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="4dp"
                                    android:text="@string/app_name"
                                    android:textSize="18sp"
                                    android:transitionName="@string/transitionName_content" />

                                <cn.guo.onetext.widget.hearttree.TreeView
                                    android:id="@+id/tree_view"
                                    android:layout_width="match_parent"
                                    android:layout_height="144dp" />

                                <TextView
                                    android:id="@id/card_mark_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:layout_marginRight="@dimen/card_margin"
                                    android:layout_marginBottom="@dimen/card_margin"
                                    android:text="@string/default_mark"
                                    android:textSize="10sp"
                                    android:visibility="gone" />
                            </FrameLayout>


                        </LinearLayout>
                    </RelativeLayout>


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:tag="不需要">

        <TextView
            android:id="@id/card_text_author_felt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="—— "
            android:visibility="gone" />

        <TextView
            android:id="@id/card_text_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:textSize="18sp"
            android:transitionName="@string/transitionName_author"
            android:visibility="gone" />

        <TextView
            android:id="@id/card_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:gravity="center"
            android:transitionName="@string/transitionName_date"
            android:visibility="gone" />

        <TextView
            android:id="@id/card_text_content_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="“"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@id/card_text_content_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="”"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@id/card_text_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:gravity="right"
            android:transitionName="@string/transitionName_source"
            android:visibility="gone" />

        <cn.guo.onetext.widget.SvgAnimationView.SvgAnimationView
            android:id="@id/card_svg"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignTop="@id/card_temps"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:visibility="gone" />

        <cn.guo.onetext.widget.CircleImageView
            android:id="@id/card_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>